Wed Sep 26 23:54:11 2001  George Lebl <jirka@5z.com>

	* daemon/gdm-net.c, gui/gdmflexiserver.c: deal with the case where
	  MSG_NOSIGNAL is not defined by temporairly ignoring the SIGPIPE
	  signal.  Fixes #60586

Wed Sep 26 21:01:38 2001  George Lebl <jirka@5z.com>

	* daemon/verify.h, daemon/verify-*.c, daemon/slave.c,
	  daemon/errorgui.[ch], daemon/gdm.c:  Add a failsafe question
	  dialog similar in operation to the failsafe error box, and use
	  it in the standalone pam conv function.  Kill all instances of
	  PAM_SILENT since we can now always converse with the user.

	* daemon/verify-pam.c: use a global pamh again but this time a bit
	  smarter.  Make sure if we use a global one that it has all the
	  right things set.  Also set PAM_RHOST to "localhost" or the remote
	  host if not a "console" login.  Set PAM_RUSER to "gdm" (or whatever
	  the gdm user is).  I'm sure I'm fucking something up again but
	  I can't find enough docs to verify that what I'm doing is 100%
	  correct.  Not to mention that there seem to be some braindead
	  modules out there to begin with.

Mon Sep 17 07:17:32 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: fix crash when quiver would happen while
	  iconized

	* daemon/misc.c: include signal.h

	* gui/gdmlogin.c: don't go nuts on just minor version change, only
	  tell the user to piss of when the greeter protocol version changed.

Thu Sep 13 00:20:46 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: Apply patch from Ali Akcaagac
	  <ali.akcaagac@stud.fh-wilhelmshaven.de> to fix up the 24hr time
	  display to not show the %p

Tue Sep 11 02:34:47 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.h, config/gdm.conf.in, gui/gdmconfig.(c|glade),
	  gui/gdmlogin.c, docs/C/gdm.sgml:  Apply and finish a patch from
	  Terje Rosten <terjeros@phys.ntnu.no> to add an option to force
	  24 hour clock on the greeter

Tue Sep 11 01:37:42 2001  George Lebl <jirka@5z.com>

	* daemon/errorgui.c: use the safe fork function
